force-app/main/default/objects/AC_Templates_Config__c.object
<CustomObject>
    <fields>
        <fullName>AC_BatchClassName__c</fullName>
        <label>AC_BatchClassName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AC_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>AC_Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AC_Object__c</fullName>
        <label>AC_Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AC_ScheduleData__c</fullName>
        <label>AC_ScheduleData</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AC_SuccessDateMap__c</fullName>
        <label>AC_SuccessDateMap</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AC_TemplateDataJson__c</fullName>
        <label>AC_TemplateDataJson</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>AC_Templates Config</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AC_Name__c</columns>
        <columns>AC_Object__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AC_Templates Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC_Templates Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>